--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <a href='https://github.com/victordibia/handtrack.js/'>Handtrack</a> + <a href='https://github.com/PavelDoGreat/WebGL-Fluid-Simulation'>Fluid Simulation</a>
     <p>@buzzlightila</p>
   </h1>
-
+  <audio autoplay loop>
+    <source src='./sounds/Blue_Sizzle_Madness_Paranoia.mp3' type="audio/mpeg">
+  </audio>
   <canvas id='canvas' class='border canvasbox'></canvas>
   <canvas id='fluid'></canvas>
   <video class='videobox canvasbox' autoplay='autoplay' id='myvideo'></video>
